--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -54,8 +54,8 @@
             },
             "columns": [
                 {"data": "name",
-                    "render": function (data){
-                        return '<a href="javascript:void(0)" onclick="approval(\''+ data +'\')">' + data + '</a>'
+                    "render": function (data, type, row){
+                        return '<a href="javascript:void(0)" onclick="approval(\''+ row.nickname +'\')">' + data + '</a>'
                     }
                 },
                 {"data": "phone"},
